Making the patch functional on KSP 1.7.x

--- a/GameData/RocketSoundEnhancement/GlobalConfig/Wheels.cfg
+++ b/GameData/RocketSoundEnhancement/GlobalConfig/Wheels.cfg
@@ -24,18 +24,22 @@
 
 				spread = 0.12
 
+				tempSpeedMax:NEEDS[!KSP-1.8] = 120.0
+				tempSpeedMax:NEEDS[KSP-1.8] = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$
 				volume = 0.0 0.0
 				volume = 1.0 0.5
-				volume = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$ 0.8
+				volume = #$tempSpeedMax$ 0.8
 
-				pitchTemp = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$
+				pitchTemp:NEEDS[!KSP-1.8] = 120.0
+				pitchTemp:NEEDS[KSP-1.8] = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$
 				pitchTemp /= 3
 
 				pitch = 0.0 0.25
 				pitch = #$pitchTemp$ 1.0
-				pitch = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$ 1.1
+				pitch = #$tempSpeedMax$ 1.1
 
 				!pitchTemp = delete
+				!tempSpeedMax = delete
 			}
 
 			SOUNDLAYER
@@ -53,19 +57,23 @@
 
 				spread = 0.12
 
-				pitchTemp = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$
+				tempSpeedMax:NEEDS[!KSP-1.8] = 120.0
+				tempSpeedMax:NEEDS[KSP-1.8] = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$
+
+				pitchTemp = #$tempSpeedMax$
 				pitchTemp /= 3
 
 				volume = 0.0 0.0
 				volume = 1.0 0.7
 				volume = #$pitchTemp$ 0.6
-				volume = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$ 0.2
+				volume = #$tempSpeedMax$ 0.2
 
 				pitch = 0.0 0.1
 				pitch = #$pitchTemp$ 0.75
-				pitch = #$/MODULE[ModuleWheelMotor]/wheelSpeedMax$	1.0
+				pitch = #$tempSpeedMax$ 1.0
 
 				!pitchTemp = delete
+				!tempSpeedMax = delete
 			}
 		}
 
