Fixing a patch syntax error

--- a/GameData/RocketSoundEnhancement/GlobalConfig/Decouplers.cfg
+++ b/GameData/RocketSoundEnhancement/GlobalConfig/Decouplers.cfg
@@ -21,7 +21,7 @@
 		}
 	}
 }
-@PART:HAS[!MODULE[RSE_Coupler],@MODULE[ModuleAnchoredDecoupler]:AFTER[RocketSoundEnhancement]
+@PART:HAS[!MODULE[RSE_Coupler],@MODULE[ModuleAnchoredDecoupler]]:AFTER[RocketSoundEnhancement]
 {
 	!sound_decoupler_fire = decouple
 
